Добавил регистрацию и аутентификацию через Laravel Sanctum
