# Modules/Auth/Dto/LoginDto.php
@@ -1,0 +1,12 @@
+<?php
+
+
+namespace Modules\Auth\Dto;
+
+use App\Dto\Dto;
+
+class LoginDto extends Dto
+{
+    public $email;
+    public $password;
+}
