# Modules/Auth/Requests/RegisterUserRequest.php
@@ -1,0 +1,47 @@
+<?php
+
+namespace Modules\Auth\Requests;
+
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Exceptions\HttpResponseException;
+
+class RegisterUserRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'login'    => 'required|string|max:150|unique:users',
+            'email'    => 'required|string|max:255|unique:users',
+            'password' => 'required|string||max:150'
+        ];
+    }
+
+    /**
+     * @param Validator $validator
+     */
+    protected function failedValidation(Validator $validator): void
+    {
+        throw new HttpResponseException(
+            response()->error(
+                [],
+                $validator->errors()
+            )
+        );
+    }
+}
